Cambio de imagen en nosotros 4

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -49,7 +49,7 @@
                 </div>
                 <div class="row">
                     <div class="efra col-12">
-                        <img class="img-fluid p1 trans2" src="../img/efra.jpeg" width="400px" height="500px" alt="Efrain">
+                        <img class="img-fluid p1 trans2" src="../img/Efra.jpg" width="400px" height="500px" alt="Efrain">
                         <h4 class="nombres col-md-6 offset-md-3">Efrain</h4>
                         <p class="formulario">Soy una persona a la cual no le gusta dar rodeos, me gusta ser directo y concreto en lo que hago y digo, me gusta el conocimiento, no me gusta quedar con dudas así que trato de informarme de los temas que me causan intriga, también me gusta ayudar a en lo que sé que puedo aportar. Me gusta el viajar, disfrutar del trayecto no solo del destino, tengo fascinación por los lugares boscosos, así como los lugares frescos. Me gustan los videojuegos, mas que nada aquellos que llaman soul-like, porque me agradan los retos y la satisfacción que te da al finalizar algo que se sentía tan complicado. 
                         <br><br>Como formación profesional, tengo una carrera en ingeniería electrónica y actualmente me encuentro laburando como back-end developer, tengo conocimientos en Python, PowerShell, C+. c++ y actualmente estoy terminando un curso de desarrollo web.</p>
