--- a/index.html
+++ b/index.html
@@ -43,18 +43,20 @@
         </div>    
     </header>
     <main class="container text-center">
-        <div class="row titulo1home col-lg-12 cont">
+        <div class="row titulo1home cont">
             <H1>Efrain y Misraim</H1>
             <p>Bienvenidos a nuestro sitio</p>
         </div>
-        <div class="row col-6 offset-md-3">
-            <img class="img-fluid p1 formulario" src="img/nosotros2.jpg" alt="Efrain y Misraim en Calvillo">
+        <div class="row col-12 p1">
+            <img class="" src="img/nosotros2.jpg" alt="Efrain y Misraim en Calvillo">
         </div>
-        <div class="row col-12 formulario">
-            <P>Dicen que cuando encuentras a la persona indicada todo se va dando sin importar el qué o el cómo. Todo comenzó un 6 de septiembre del 2021, desde ese día comenzamos a escribir cada página de nuestra historia y debo de admitir que cada una está llena de increíbles anécdotas y vivencias las cuales nos reafirmaron que estamos hechos el uno para el otro, por lo cual en próximo 11 de junio del 2023 uniremos nuestras vidas en matrimonio.  </P>
-            <p>La motivación de este sitio es anexar momentos que han sido especiales para nosotros, así como nuestros viajes y que conozcan un poco de nosotros. </p>
+        <div class="row col-12">
+            <div class="ind">
+                <P>Dicen que cuando encuentras a la persona indicada todo se va dando sin importar el qué o el cómo. Todo comenzó un 6 de septiembre del 2021, desde ese día comenzamos a escribir cada página de nuestra historia y debo de admitir que cada una está llena de increíbles anécdotas y vivencias las cuales nos reafirmaron que estamos hechos el uno para el otro, por lo cual en próximo 11 de junio del 2023 uniremos nuestras vidas en matrimonio.  </P>
+                <p>La motivación de este sitio es anexar momentos que han sido especiales para nosotros, así como nuestros viajes y que conozcan un poco de nosotros. </p>
+            </div>
         </div>
-        <div class="row col-12 titulo2home formulario p1">
+        <div class="row col-12 titulo2home p1 ind">
             <h2>Nuestra cancion</h2>
             <iframe class="p1" width="560" height="315" src="https://www.youtube.com/embed/e2PNG9mN5NE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
